New-Upload-1755854042013/objects/Application_Visibility__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Set Name</label>
        <referenceTo>Permission_Set_Admin__c</referenceTo>
        <relationshipLabel>Application Visibilities</relationshipLabel>
        <relationshipName>Application_Visibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Application Visibilities</relationshipLabel>
        <relationshipName>Application_Visibilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Visibility</label>
    <nameField>
        <displayFormat>AV-{0000}</displayFormat>
        <label>Application Visibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Visibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>